# aoc

2022/: aoc3.ml  bin.ml  dune
2022/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
2022/.direnv/flake-inputs/: 2h48c7sxckbrfj5rgd9zm4igfqdgia4l-source
2022/_build/: .db  .digest-db  log
2022/_build/default/: aoc1.ml  aoc2.ml  bin.ml
2022/_build/default/.bin.eobjs/: aoc1.ml.d  aoc2.ml.d  bin.ml.d  bin.mli.d  dune__exe.ml-gen  dune__exe__Bin.impl.all-deps
2022/_build/default/.bin.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Aoc1.cmi  dune__exe__Aoc1.cmo  dune__exe__Aoc1.cmt  dune__exe__Aoc2.cmi  dune__exe__Aoc2.cmo  dune__exe__Aoc2.cmt  dune__exe__Bin.cmi  dune__exe__Bin.cmti
2022/_build/default/.bin.eobjs/native/: dune__exe.cmx  dune__exe__Aoc1.cmx  dune__exe__Aoc2.cmx  dune__exe__Bin.cmx
2022/_build/default/.dune/: configurator  configurator.v2
2022/_build/default/.merlin-conf/: exe-bin
2023/: aoc.opam  day1.ml  day2.ml  day3.ml  day4.ml  dune  dune-project  flake.nix
2023/input/: 1.short
